fix appbar collapsed bg being too dark

--- a/Helium/gtk-4.0/_tauos.scss
+++ b/Helium/gtk-4.0/_tauos.scss
@@ -771,7 +771,7 @@ $colors: (
 
 .appbar {
   padding: 10px 8px 8px 10px;
-  background: gtkshade($window_bg_color, 0.8);
+  background: gtkshade($window_bg_color, 0.92);
   box-shadow: none;
 }
 
